--- a/app/view/default/index.Twig
+++ b/app/view/default/index.Twig
@@ -1,5 +1,21 @@
 {% extends 'default/layout/base.Twig' %}
 
 {% block content %}
-1234
+	<div class="is-centered box">
+		<div class="flex flex-col gap-4">
+			{% for memo in memos %}
+				<div class="flex gap-2">
+					<img src="{{ memo.author.avatar_url }}" alt="" class="size-14 rounded">
+					<div class="flex flex-col gap-2">
+						<div class="has-text-weight-medium is-size-5">
+							{{ memo.author.username }}
+						</div>
+						<div class="content">
+							{{ memo.content|custom_raw|replace('<br>','') }}
+						</div>
+					</div>
+				</div>
+			{% endfor %}
+		</div>
+	</div>
 {% endblock %}
