--- a/app/view/default/layout/nav.Twig
+++ b/app/view/default/layout/nav.Twig
@@ -21,9 +21,9 @@
 
 	<div id="navbarBasicExample" class="navbar-menu">
 		<div class="navbar-start">
-			<a class="navbar-item icon-text">
+			<a class="navbar-item icon-text" href="/">
 				<span class="icon is-small">
-					<i class="fas fa-paper-plane"></i>
+					<img src="/icons/home.svg" alt="">
 				</span>
 				<span>广场</span>
 			</a>
@@ -31,21 +31,33 @@
 			<a class="navbar-item">
 				热门
 			</a>
-			<a class="navbar-item">
-				我的
-			</a>
+			{% if currentUser %}
+				<a class="navbar-item">
+					我的
+				</a>
+				<a class="navbar-item" href="/memo/add">
+					<span>发言</span>
+				</a>
+			{% endif %}
 		</div>
 
 		<div class="navbar-end">
 
 			<div class="navbar-item">
 				<div class="buttons">
-					<a class="button" href="/user/reg">
-						<strong>注册</strong>
-					</a>
-					<a class="button is-light" href="/user/login">
-						登录
-					</a>
+					{% if not currentUser %}
+						<a class="button" href="/user/reg">
+							<strong>注册</strong>
+						</a>
+						<a class="button is-light" href="/user/login">
+							登录
+						</a>
+					{% else %}
+
+						<a class="button" href="/user/logout">
+							<strong>登出</strong>
+						</a>
+					{% endif %}
 				</div>
 			</div>
 		</div>
