--- a/app/view/default/index.Twig
+++ b/app/view/default/index.Twig
@@ -1,21 +1,32 @@
 {% extends 'default/layout/base.Twig' %}
 
 {% block content %}
-	<div class="is-centered box">
-		<div class="flex flex-col gap-4">
+	<div class="is-centered ">
+		<div class="flex flex-col ">
 			{% for memo in memos %}
-				<div class="flex gap-2">
-					<img src="{{ memo.author.avatar_url }}" alt="" class="size-14 rounded">
-					<div class="flex flex-col gap-2">
-						<div class="has-text-weight-medium is-size-5">
-							{{ memo.author.username }}
-						</div>
-						<div class="content">
-							{{ memo.content|custom_raw|replace('<br>','') }}
-						</div>
-					</div>
-				</div>
+				{% include 'default/component/memo.Twig' %}
 			{% endfor %}
 		</div>
 	</div>
+{% endblock %}
+
+{% block afterScript %}
+	<script>
+      $(function () {
+
+          $(document.body).on('click', function (event) {
+              const $target = $(event.target); // 获取被点击的元素
+							const $trigger = $($target.closest('[data-trigger]'))
+		          const $triggerItem = $($target.closest('[data-trigger-item]'))
+              if ($trigger.length > 0) {
+                  $("div[data-trigger-item]").hide()
+                  $($trigger).next().toggle()
+              }else if ($triggerItem.length > 0) {
+                  $($triggerItem).hide();
+              }else{
+                  $("div[data-trigger-item]").hide()
+              }
+          })
+      })
+	</script>
 {% endblock %}
