--- a/app/view/default/layout/base.Twig
+++ b/app/view/default/layout/base.Twig
@@ -7,16 +7,24 @@
     <script src="https://cdn.jsdelivr.net/npm/@unocss/runtime"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@1.0.1/css/bulma.min.css">
     <link href="https://cdn.bootcdn.net/ajax/libs/font-awesome/6.5.2/css/all.min.css" rel="stylesheet">
+    <script src="https://cdn.bootcdn.net/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     {% include 'default/layout/header.Twig' %}
     {% block beforeScript %} {% endblock %}
     <style>
+        *{
+            font-family: Helvetica, Tahoma, Arial, "Microsoft YaHei", "Hiragino Sans GB", "WenQuanYi Micro Hei", sans-serif !important;
+        }
+        html,body{
+            width: 100%;
+            height:100%;
+        }
         [un-cloak] {
             display: none;
         }
     </style>
 </head>
-<body>
-<div class="container is-max-desktop" un-cloak>
+<body class="bg-[#f1f5f9] dark:bg-slate-800 rounded-md dark:text-[#C0BEBF]">
+<div class="lg:w-[567px] mx-auto shadow-2xl bg-white dark:bg-[#181818]" un-cloak>
     {% include 'default/layout/nav.Twig' %}
     {% block content %} {% endblock %}
     {% include 'default/layout/footer.Twig' %}
