--- a/app/view/default/component/memo.Twig
+++ b/app/view/default/component/memo.Twig
@@ -1,25 +1,24 @@
 <div class="p-4 flex gap-4 flex-row text-sm border-x-0">
 
 	<img src="{{ memo.author.avatar_url }}" alt="" class="avatar w-12 h-12 rounded cursor-pointer">
-	<div class="flex flex-col gap-2 flex-1">
+	<div class="flex flex-col flex-1">
 		<div class="text-[#576b95] dark:text-white cursor-pointer">
 			{{ memo.author.nickname }}
 		</div>
 
-		<div class="content text-wrap break-all line-clamp-4">
-			{{ memo.content|custom_raw }}
+		<div class="content text-wrap break-all line-clamp-4" id="content" data-content="{{ memo.content }}">
 		</div>
 
-		<div class="flex justify-between relative">
+		<div class="flex justify-between relative items-center">
 				<span class="text-gray text-xs text-[#9DA4B0]">
-					{{ memo.author.created_at }}
+					{{ memo.author.created_at|timeAgo }}
 				</span>
 			<div data-trigger
-					class="toolbar-icon px-2 py-1 bg-[#f7f7f7] dark:bg-slate-700 hover:bg-[#dedede] cursor-pointer rounded flex items-center justify-center"
-					data-v-e8d5a3a3="">
+			     class="toolbar-icon px-2 py-1 bg-[#f7f7f7] dark:bg-slate-700 hover:bg-[#dedede] cursor-pointer rounded flex items-center justify-center"
+			>
 				<img
 						src="data:image/svg+xml,%3csvg%20t='1709204592505'%20class='icon'%20viewBox='0%200%201024%201024'%20version='1.1'%20xmlns='http://www.w3.org/2000/svg'%20p-id='16237'%20width='16'%20height='16'%3e%3cpath%20d='M229.2%20512m-140%200a140%20140%200%201%200%20280%200%20140%20140%200%201%200-280%200Z'%20p-id='16238'%20fill='%238a8a8a'%3e%3c/path%3e%3cpath%20d='M794.8%20512m-140%200a140%20140%200%201%200%20280%200%20140%20140%200%201%200-280%200Z'%20p-id='16239'%20fill='%238a8a8a'%3e%3c/path%3e%3c/svg%3e"
-						class="w-3 h-3" data-v-e8d5a3a3=""></div>
+						class="w-3 h-3"/></div>
 
 			<div data-trigger-item class="hidden absolute top-[-8px] right-[32px] bg-[#4c4c4c] rounded text-white p-2 px-4">
 				<div class="flex flex-row gap-4"><!----><!----><!---->
@@ -30,21 +29,113 @@
 							<path
 									d="M19 14c1.49-1.46 3-3.21 3-5.5A5.5 5.5 0 0 0 16.5 3c-1.76 0-3 .5-4.5 2-1.5-1.5-2.74-2-4.5-2A5.5 5.5 0 0 0 2 8.5c0 2.3 1.5 4.05 3 5.5l7 7Z"></path>
 						</svg>
-						<div data-v-e8d5a3a3="">赞</div>
+						<div>赞</div>
 					</div>
-					<span class="bg-[#6b7280] h-[20px] w-[1px]"></span>
-					<div class="flex flex-row gap-1 cursor-pointer items-center">
-						<svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" viewBox="0 0 24 24"
-						     fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
-						     class="lucide lucide-message-square-more-icon">
-							<path d="M21 15a2 2 0 0 1-2 2H7l-4 4V5a2 2 0 0 1 2-2h14a2 2 0 0 1 2 2z"></path>
-							<path d="M8 10h.01"></path>
-							<path d="M12 10h.01"></path>
-							<path d="M16 10h.01"></path>
-						</svg>
-						<div data-v-e8d5a3a3="">评论</div>
-					</div>
+					{% if currentUser %}
+						<span class="bg-[#6b7280] h-[20px] w-[1px]"></span>
+						<div class="flex flex-row gap-1 cursor-pointer items-center" data-trigger-comment="{{ memo.id }}">
+							<svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" viewBox="0 0 24 24"
+							     fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+							     class="lucide lucide-message-square-more-icon">
+								<path d="M21 15a2 2 0 0 1-2 2H7l-4 4V5a2 2 0 0 1 2-2h14a2 2 0 0 1 2 2z"></path>
+								<path d="M8 10h.01"></path>
+								<path d="M12 10h.01"></path>
+								<path d="M16 10h.01"></path>
+							</svg>
+							<div>评论</div>
+						</div>
+
+						{% if currentUser.id == memo.author.id or currentUser.id == 1 %}
+							<span class="bg-[#6b7280] h-[20px] w-[1px]"></span>
+							<div class="flex flex-row gap-1 cursor-pointer items-center"
+							     onclick="location.href='/memo/edit/{{ memo.id }}'">
+								<svg data-v-e8d5a3a3="" xmlns="http://www.w3.org/2000/svg" width="14" height="14" viewBox="0 0 24 24"
+								     fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+								     class="lucide lucide-file-pen-line-icon">
+									<path d="m18 5-3-3H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2"></path>
+									<path d="M8 18h1"></path>
+									<path d="M18.4 9.6a2 2 0 1 1 3 3L17 17l-4 1 1-4Z"></path>
+								</svg>
+								<div>编辑</div>
+							</div>
+
+							<span class="bg-[#6b7280] h-[20px] w-[1px]"></span>
+							<div class="flex flex-row gap-1 cursor-pointer items-center"
+							     onclick="location.href='/memo/remove/{{ memo.id }}'">
+								<svg data-v-e8d5a3a3="" xmlns="http://www.w3.org/2000/svg" width="14" height="14" viewBox="0 0 24 24"
+								     fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+								     class="lucide lucide-trash2-icon">
+									<path d="M3 6h18"></path>
+									<path d="M19 6v14c0 1-1 2-2 2H7c-1 0-2-1-2-2V6"></path>
+									<path d="M8 6V4c0-1 1-2 2-2h4c1 0 2 1 2 2v2"></path>
+									<line x1="10" x2="10" y1="11" y2="17"></line>
+									<line x1="14" x2="14" y1="11" y2="17"></line>
+								</svg>
+								<div>删除</div>
+							</div>
+						{% endif %}
+
+					{% endif %}
 				</div>
+			</div>
+		</div>
+
+		<div class="rounded bottom-shadow bg-[#f7f7f7] dark:bg-[#202020] flex flex-col gap-1 my-2 px-4 py-2">
+			<div class="flex gap-4">
+				<svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="#C64A4A"
+				     stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-heart-icon"
+				     data-v-e8d5a3a3="">
+					<path
+							d="M19 14c1.49-1.46 3-3.21 3-5.5A5.5 5.5 0 0 0 16.5 3c-1.76 0-3 .5-4.5 2-1.5-1.5-2.74-2-4.5-2A5.5 5.5 0 0 0 2 8.5c0 2.3 1.5 4.05 3 5.5l7 7Z"></path>
+				</svg>
+				<span class="text-[#576b95]">8 位访客</span>
+			</div>
+			<form class="gap-4 flex-col mt-4 hidden" data-comment-box="{{ memo.id }}" method="post"
+			      action="/memo/comment/{{ memo.id }}">
+				<textarea class="textarea is-small" name="content" placeholder="友好发言!"></textarea>
+				<div class="flex flex-row gap-2">
+					{% if not currentUser %}
+						<input class="input is-small" name="username" placeholder="昵称"/>
+						<input class="input is-small" name="email" placeholder="邮箱"/>
+						<input class="input is-small" name="website" placeholder="网站"/>
+					{% endif %}
+					<button class="button is-small" type="submit">发言</button>
+				</div>
+			</form>
+
+			<div class="flex gap-2 flex-col mt-2">
+				{% for comment in memo.comments %}
+					<div class="flex flex-row items-center cursor-pointer" data-trigger-comment="{{ memo.id~'x'~comment.id }}">
+						<img src="{{ comment.author ? comment.author.avatar_url : 'xx' }}" alt=""
+						     class="avatar w-6 h-6 rounded mr-2">
+						<div
+								class="text-[#576b95] dark:text-white">{{ comment.author ? comment.author.nickname : comment.username }}</div>
+						{% if comment.author and comment.author.id == memo.author.id %}
+							<div class="border text-xs border-solid border-[#C64A4A] rounded mx-1 px-0.5 text-[#C64A4A]">作者</div>
+						{% endif %}
+						{% if comment.reply_username %}
+							<span class="mx-1">回复</span>
+							<div class="text-[#576b95] dark:text-white">{{ comment.reply_username }}</div>
+						{% endif %}
+						<span>:</span>
+						<div class="dark:text-white">{{ comment.content }}</div>
+					</div>
+
+					<form class="gap-4 flex-col hidden" data-comment-box="{{ memo.id~'x'~comment.id }}" method="post"
+					      action="/memo/comment/{{ memo.id }}">
+						<input type="hidden" name="reply_user_id" value="{{ comment.author?comment.author.id : 0 }}">
+						<input type="hidden" name="reply_username" value="{{ comment.author?comment.author.nickname : comment.username }}">
+						<textarea class="textarea is-small" name="content" placeholder="回复给@{{ comment.author?comment.author.nickname : comment.username }}"></textarea>
+						<div class="flex flex-row gap-2">
+							{% if not currentUser %}
+								<input class="input is-small" name="username" placeholder="昵称"/>
+								<input class="input is-small" name="email" placeholder="邮箱"/>
+								<input class="input is-small" name="website" placeholder="网站"/>
+							{% endif %}
+							<button class="button is-small" type="submit">发言</button>
+						</div>
+					</form>
+				{% endfor %}
 			</div>
 		</div>
 
