--- a/app/view/default/user/login.Twig
+++ b/app/view/default/user/login.Twig
@@ -1,48 +1,43 @@
 {% extends 'default/layout/base.Twig' %}
 
 {% block content %}
-	<div class="columns is-centered box">
-		<div class="column is-6">
-			<form action="/user/doLogin" method="post">
-				<div class="field">
-					<label for="username" class="label">用户名</label>
-					<div class="control">
-						<input class="input" type="text" name="username" value="{{ data.username }}">
-					</div>
-					{% if exception starts with '用户名' %}
-						<p class="help is-danger">{{ exception }}</p>
-					{% endif %}
-				</div>
 
-				<div class="field">
-					<label for="password" class="label">密码</label>
-					<div class="control">
-						<input class="input" type="password" name="password" value="{{ data.password }}">
-					</div>
-					{% if exception starts with '密码' %}
-						<p class="help is-danger">{{ exception }}</p>
-					{% endif %}
-				</div>
-
-				{% if message %}
-					<div class="block has-text-success">{{ message }}</div>
-				{% endif %}
-
-				<div class="field is-grouped">
-					<div class="control">
-						<button class="button is-link ">
-							<span class="icon is-small">
-                <i class="fas fa-check"></i>
-              </span>
-							<span>登录</span>
-						</button>
-
-						<a class="button is-light " href="/user/reg">去注册</a>
-					</div>
-
-				</div>
-
-			</form>
+	<form action="/user/doLogin" method="post" class="px-10 py-4">
+		<div class="field">
+			<label for="username" class="label">用户名</label>
+			<div class="control">
+				<input class="input" type="text" name="username" value="{{ data.username }}">
+			</div>
+			{% if exception starts with '用户名' %}
+				<p class="help is-danger">{{ exception }}</p>
+			{% endif %}
 		</div>
-	</div>
+
+		<div class="field">
+			<label for="password" class="label">密码</label>
+			<div class="control">
+				<input class="input" type="password" name="password" value="{{ data.password }}">
+			</div>
+			{% if exception starts with '密码' %}
+				<p class="help is-danger">{{ exception }}</p>
+			{% endif %}
+		</div>
+
+		{% if message %}
+			<div class="block has-text-success">{{ message }}</div>
+		{% endif %}
+
+		<div class="field is-grouped">
+			<div class="control">
+				<button class="button is-link ">
+					<span>登录</span>
+				</button>
+
+				<a class="button is-light " href="/user/reg">去注册</a>
+			</div>
+
+		</div>
+
+	</form>
+
 {% endblock %}
