--- a/app/view/default/index.Twig
+++ b/app/view/default/index.Twig
@@ -15,44 +15,63 @@
 	<link rel="stylesheet" href="https://uicdn.toast.com/editor/latest/toastui-editor-viewer.min.css"/>
 	<script>
 
-    $(function () {
+      $(function () {
 
-      //评论工具栏
-      $("div[data-trigger-comment]").click(function () {
-        const id = $(this).data('trigger-comment')
-        const $target = $("form[data-comment-box='" + id + "']")
-        $("form[data-comment-box]").removeClass('flex').addClass('hidden');
-        if ($target.hasClass('flex')) {
-          $target.removeClass('flex').addClass('hidden')
-        } else {
-          $target.removeClass('hidden').addClass('flex')
-        }
+          //评论工具栏
+          $("div[data-trigger-comment]").click(function () {
+              const id = $(this).data('trigger-comment')
+              const $target = $("form[data-comment-box='" + id + "']")
+              const $commentBox = $("form[data-comment-box]")
+              $commentBox.not($target).removeClass('flex').addClass('hidden');
+              $commentBox.not($target).each(function (){
+                if($(this).is(":only-child")){
+                    $(this).parent().removeClass('flex').addClass('hidden');
+                }
+              })
+              if ($target.hasClass('flex')) {
+                  $target.removeClass('flex').addClass('hidden')
+              } else {
+                  $target.removeClass('hidden').addClass('flex')
+                  $("div[data-comment-area='" + id + "']").removeClass('hidden').addClass('flex')
+              }
+          })
+
+
+          // markdown解析
+          $("div[data-content]").each(function (index) {
+              new toastui.Editor({
+                  el: $(this).get(0),
+                  initialValue: $(this).data('content') + ''
+              });
+              $(this).attr('data-content', '')
+          })
+
+          // 互动工具栏
+          $(document.body).on('click', function (event) {
+              const $target = $(event.target); // 获取被点击的元素
+              const $trigger = $($target.closest('[data-trigger]'))
+              const $triggerItem = $($target.closest('[data-trigger-item]'))
+              if ($trigger.length > 0) {
+                  $("div[data-trigger-item]").hide()
+                  $($trigger).next().toggle()
+              } else if ($triggerItem.length > 0) {
+                  $($triggerItem).hide();
+              } else {
+                  $("div[data-trigger-item]").hide()
+              }
+          })
+
+          // 发起点赞
+          $("form[data-like-form]").submit(function () {
+              const id = $(this).data('like-form')
+              $(this).ajaxSubmit(function (data){
+                  // console.log(data)
+                  // $("div[data-comment-area='"+id+"']").parents(".memo").replaceWith($(data))
+                  window.location.reload();
+              })
+
+              return false;
+          })
       })
-
-
-      // markdown解析
-      $("div[data-content]").each(function (index) {
-        new toastui.Editor({
-          el: $(this).get(0),
-          initialValue: $(this).data('content')
-        });
-        $(this).attr('data-content', '')
-      })
-
-      // 互动工具栏
-      $(document.body).on('click', function (event) {
-        const $target = $(event.target); // 获取被点击的元素
-        const $trigger = $($target.closest('[data-trigger]'))
-        const $triggerItem = $($target.closest('[data-trigger-item]'))
-        if ($trigger.length > 0) {
-          $("div[data-trigger-item]").hide()
-          $($trigger).next().toggle()
-        } else if ($triggerItem.length > 0) {
-          $($triggerItem).hide();
-        } else {
-          $("div[data-trigger-item]").hide()
-        }
-      })
-    })
 	</script>
 {% endblock %}
