--- a/app/view/default/memo/save.Twig
+++ b/app/view/default/memo/save.Twig
@@ -18,6 +18,9 @@
 					<button class="button is-link">
 						<span>发言</span>
 					</button>
+					<button class="button" onclick="location.href='/'">
+						<span>返回</span>
+					</button>
 				</div>
 			</div>
 		</form>
