--- a/app/view/default/component/memo.Twig
+++ b/app/view/default/component/memo.Twig
@@ -1,12 +1,12 @@
-<div class="p-4 flex gap-4 flex-row text-sm border-x-0">
+<div class="memo p-4 flex gap-4 flex-row text-sm border-x-0">
 
 	<img src="{{ memo.author.avatar_url }}" alt="" class="avatar w-12 h-12 rounded cursor-pointer">
 	<div class="flex flex-col flex-1">
-		<div class="text-[#576b95] dark:text-white cursor-pointer">
+		<div class="text-[#576b95] dark:text-white cursor-pointer w-fit">
 			{{ memo.author.nickname }}
 		</div>
 
-		<div class="content text-wrap break-all line-clamp-4" id="content" data-content="{{ memo.content }}">
+		<div class="text-wrap break-all line-clamp-4" data-content="{{ memo.content }}">
 		</div>
 
 		<div class="flex justify-between relative items-center">
@@ -21,17 +21,17 @@
 						class="w-3 h-3"/></div>
 
 			<div data-trigger-item class="hidden absolute top-[-8px] right-[32px] bg-[#4c4c4c] rounded text-white p-2 px-4">
-				<div class="flex flex-row gap-4"><!----><!----><!---->
-					<div class="flex flex-row gap-1 cursor-pointer items-center">
+				<div class="flex flex-row gap-4">
+					<form action="/memo/like/{{ memo.id }}" class="flex flex-row gap-1 cursor-pointer items-center" data-like-form="{{ memo.id }}" method="post">
 						<svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" viewBox="0 0 24 24"
 						     fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
 						     class="lucide lucide-heart-icon">
 							<path
 									d="M19 14c1.49-1.46 3-3.21 3-5.5A5.5 5.5 0 0 0 16.5 3c-1.76 0-3 .5-4.5 2-1.5-1.5-2.74-2-4.5-2A5.5 5.5 0 0 0 2 8.5c0 2.3 1.5 4.05 3 5.5l7 7Z"></path>
 						</svg>
-						<div>赞</div>
-					</div>
-					{% if currentUser %}
+						<button type="submit">点赞</button>
+					</form>
+
 						<span class="bg-[#6b7280] h-[20px] w-[1px]"></span>
 						<div class="flex flex-row gap-1 cursor-pointer items-center" data-trigger-comment="{{ memo.id }}">
 							<svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" viewBox="0 0 24 24"
@@ -44,7 +44,7 @@
 							</svg>
 							<div>评论</div>
 						</div>
-
+					{% if currentUser %}
 						{% if currentUser.id == memo.author.id or currentUser.id == 1 %}
 							<span class="bg-[#6b7280] h-[20px] w-[1px]"></span>
 							<div class="flex flex-row gap-1 cursor-pointer items-center"
@@ -80,16 +80,18 @@
 			</div>
 		</div>
 
-		<div class="rounded bottom-shadow bg-[#f7f7f7] dark:bg-[#202020] flex flex-col gap-1 my-2 px-4 py-2">
-			<div class="flex gap-4">
-				<svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="#C64A4A"
-				     stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-heart-icon"
-				     data-v-e8d5a3a3="">
-					<path
-							d="M19 14c1.49-1.46 3-3.21 3-5.5A5.5 5.5 0 0 0 16.5 3c-1.76 0-3 .5-4.5 2-1.5-1.5-2.74-2-4.5-2A5.5 5.5 0 0 0 2 8.5c0 2.3 1.5 4.05 3 5.5l7 7Z"></path>
-				</svg>
-				<span class="text-[#576b95]">8 位访客</span>
-			</div>
+		<div data-comment-area="{{ memo.id }}" class="rounded bottom-shadow bg-[#f7f7f7] dark:bg-[#202020]  flex-col gap-1 my-2 px-4 py-2 {{ (memo.fav_count == 0 and memo.comments is empty) ? 'hidden' :'flex' }}">
+			{% if memo.fav_count > 0 %}
+				<div class="flex gap-4">
+					<svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="#C64A4A"
+					     stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-heart-icon"
+					     data-v-e8d5a3a3="">
+						<path
+								d="M19 14c1.49-1.46 3-3.21 3-5.5A5.5 5.5 0 0 0 16.5 3c-1.76 0-3 .5-4.5 2-1.5-1.5-2.74-2-4.5-2A5.5 5.5 0 0 0 2 8.5c0 2.3 1.5 4.05 3 5.5l7 7Z"></path>
+					</svg>
+					<span class="text-[#576b95]"><span class="fav_count">{{ memo.fav_count }}</span> 位访客</span>
+				</div>
+			{% endif %}
 			<form class="gap-4 flex-col mt-4 hidden" data-comment-box="{{ memo.id }}" method="post"
 			      action="/memo/comment/{{ memo.id }}">
 				<textarea class="textarea is-small" name="content" placeholder="友好发言!"></textarea>
@@ -99,44 +101,52 @@
 						<input class="input is-small" name="email" placeholder="邮箱"/>
 						<input class="input is-small" name="website" placeholder="网站"/>
 					{% endif %}
-					<button class="button is-small" type="submit">发言</button>
+					<button class="button is-small" type="submit">评论</button>
 				</div>
 			</form>
 
-			<div class="flex gap-2 flex-col mt-2">
-				{% for comment in memo.comments %}
-					<div class="flex flex-row items-center cursor-pointer" data-trigger-comment="{{ memo.id~'x'~comment.id }}">
-						<img src="{{ comment.author ? comment.author.avatar_url : 'xx' }}" alt=""
-						     class="avatar w-6 h-6 rounded mr-2">
-						<div
-								class="text-[#576b95] dark:text-white">{{ comment.author ? comment.author.nickname : comment.username }}</div>
-						{% if comment.author and comment.author.id == memo.author.id %}
-							<div class="border text-xs border-solid border-[#C64A4A] rounded mx-1 px-0.5 text-[#C64A4A]">作者</div>
-						{% endif %}
-						{% if comment.reply_username %}
-							<span class="mx-1">回复</span>
-							<div class="text-[#576b95] dark:text-white">{{ comment.reply_username }}</div>
-						{% endif %}
-						<span>:</span>
-						<div class="dark:text-white">{{ comment.content }}</div>
-					</div>
-
-					<form class="gap-4 flex-col hidden" data-comment-box="{{ memo.id~'x'~comment.id }}" method="post"
-					      action="/memo/comment/{{ memo.id }}">
-						<input type="hidden" name="reply_user_id" value="{{ comment.author?comment.author.id : 0 }}">
-						<input type="hidden" name="reply_username" value="{{ comment.author?comment.author.nickname : comment.username }}">
-						<textarea class="textarea is-small" name="content" placeholder="回复给@{{ comment.author?comment.author.nickname : comment.username }}"></textarea>
-						<div class="flex flex-row gap-2">
-							{% if not currentUser %}
-								<input class="input is-small" name="username" placeholder="昵称"/>
-								<input class="input is-small" name="email" placeholder="邮箱"/>
-								<input class="input is-small" name="website" placeholder="网站"/>
+			{% if not memo.comments is empty %}
+				<div class="flex gap-2 flex-col mt-2">
+					{% for comment in memo.comments %}
+						<div class=" cursor-pointer no-wrap" data-trigger-comment="{{ memo.id~'x'~comment.id }}">
+							<img
+									src="{{ comment.author.avatar_url ?: 'https://avatars.tzador.com/face?size=60&id=604080dfb-e4f5-432f-9b7a-a9442a0dcd74' }}"
+									alt=""
+									class="avatar w-6 h-6 rounded mr-2 vertical-top">
+							<span
+									class="text-[#576b95] dark:text-white">{{ comment.author.nickname ?: comment.username }}</span>
+							{% if comment.author is not empty and comment.author.id == memo.author.id %}
+								<span class="border border-solid border-[#C64A4A] rounded mx-0.5 px-0.5 text-[#C64A4A]">作者</span>
+								{% elseif  not comment.author.username%}
+									<span class="border border-solid border-[#C64A4A] rounded mx-0.5 px-0.5 text-[#C64A4A]">游客</span>
 							{% endif %}
-							<button class="button is-small" type="submit">发言</button>
+
+							{% if comment.reply_username %}
+								<span class="mx-1 text-xs">回复</span>
+								<span class="text-[#576b95] dark:text-white">{{ comment.reply_username }}</span>
+							{% endif %}
+							<span>:</span>
+							<span class="dark:text-white">{{ comment.content }}</span>
 						</div>
-					</form>
-				{% endfor %}
-			</div>
+
+						<form class="gap-4 flex-col hidden" data-comment-box="{{ memo.id~'x'~comment.id }}" method="post"
+						      action="/memo/comment/{{ memo.id }}">
+							<input type="hidden" name="reply_user_id" value="{{ comment.author.id ?: 0 }}">
+							<input type="hidden" name="reply_username" value="{{ comment.author.nickname ?: comment.username }}">
+							<textarea class="textarea is-small" name="content"
+							          placeholder="回复给@{{ comment.author.nickname ?: comment.username }}"></textarea>
+							<div class="flex flex-row gap-2">
+								{% if not currentUser %}
+									<input class="input is-small" name="username" placeholder="昵称"/>
+									<input class="input is-small" name="email" placeholder="邮箱"/>
+									<input class="input is-small" name="website" placeholder="网站"/>
+								{% endif %}
+								<button class="button is-small" type="submit">评论</button>
+							</div>
+						</form>
+					{% endfor %}
+				</div>
+			{% endif %}
 		</div>
 
 	</div>
