--- a/app/view/default/layout/base.Twig
+++ b/app/view/default/layout/base.Twig
@@ -7,6 +7,7 @@
     <script src="https://cdn.jsdelivr.net/npm/@unocss/runtime"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@1.0.1/css/bulma.min.css">
     <script src="https://cdn.bootcdn.net/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.form/4.3.0/jquery.form.min.js"></script>
     {% include 'default/layout/header.Twig' %}
     {% block beforeScript %} {% endblock %}
     <style>
