--- a/app/view/default/layout/footer.Twig
+++ b/app/view/default/layout/footer.Twig
@@ -1,1 +1,3 @@
-footer
+<div class="px-10 py-2 my-4 flex items-center justify-center">
+	<span class="text-xs text-gray-400">mblog.club@2024 </span>
+</div>
