--- a/app/view/default/layout/nav.Twig
+++ b/app/view/default/layout/nav.Twig
@@ -1,14 +1,37 @@
 <nav class="navbar block px-4" role="navigation" aria-label="main navigation">
 	<div class="navbar-brand">
-		<a class="navbar-item" href="https://bulma.io">
-			<svg width="640" height="160" viewBox="0 0 640 160" fill="none" xmlns="http://www.w3.org/2000/svg">
-				<path fill-rule="evenodd" clip-rule="evenodd"
-				      d="M170 132.571V27.5908C170 25.5451 170.915 23.93 172.746 22.7456C174.576 21.5612 176.729 20.969 179.206 20.969H210.377C232.019 20.969 242.84 30.4441 242.84 49.3943C242.84 62.5303 238.264 71.0902 229.112 75.074C234.603 77.2275 238.748 80.2692 241.548 84.1992C244.347 88.1292 245.747 93.8627 245.747 101.4V104.791C245.747 116.743 242.84 125.437 237.026 130.875C231.211 136.312 223.351 139.031 213.445 139.031H179.206C176.514 139.031 174.307 138.385 172.584 137.093C170.861 135.801 170 134.293 170 132.571ZM190.834 120.619H209.085C219.529 120.619 224.751 114.751 224.751 103.015V100.431C224.751 94.401 223.432 90.0404 220.794 87.3486C218.156 84.6568 214.253 83.3109 209.085 83.3109H190.834V120.619ZM190.834 66.8371H208.923C213.122 66.8371 216.326 65.5989 218.533 63.1225C220.74 60.646 221.844 57.2544 221.844 52.9475C221.844 48.7483 220.686 45.4374 218.371 43.0148C216.057 40.5922 212.853 39.3809 208.762 39.3809H190.834V66.8371ZM260.283 103.015V27.4293C260.283 25.2759 261.306 23.6608 263.351 22.5841C265.397 21.5074 267.873 20.969 270.781 20.969C273.688 20.969 276.164 21.5074 278.21 22.5841C280.256 23.6608 281.279 25.2759 281.279 27.4293V103.015C281.279 115.397 287.2 121.588 299.044 121.588C310.888 121.588 316.81 115.397 316.81 103.015V27.4293C316.81 25.2759 317.833 23.6608 319.879 22.5841C321.925 21.5074 324.401 20.969 327.308 20.969C330.215 20.969 332.692 21.5074 334.738 22.5841C336.783 23.6608 337.806 25.2759 337.806 27.4293V103.015C337.806 115.72 334.28 125.061 327.227 131.036C320.175 137.012 310.781 140 299.044 140C287.308 140 277.914 137.039 270.861 131.117C263.809 125.195 260.283 115.828 260.283 103.015ZM356.703 132.409V27.4293C356.703 25.2759 357.725 23.6608 359.771 22.5841C361.817 21.5074 364.293 20.969 367.201 20.969C370.108 20.969 372.584 21.5074 374.63 22.5841C376.676 23.6608 377.699 25.2759 377.699 27.4293V120.619H417.106C419.044 120.619 420.579 121.534 421.709 123.365C422.84 125.195 423.405 127.349 423.405 129.825C423.405 132.301 422.84 134.455 421.709 136.285C420.579 138.116 419.044 139.031 417.106 139.031H365.908C363.432 139.031 361.279 138.439 359.448 137.254C357.618 136.07 356.703 134.455 356.703 132.409ZM434.872 132.409V31.467C434.872 27.9138 435.868 25.2759 437.86 23.5532C439.852 21.8304 442.355 20.969 445.37 20.969C449.354 20.969 452.423 21.6689 454.576 23.0686C456.729 24.4684 459.098 27.4832 461.682 32.1131L481.548 68.2907L501.413 32.1131C503.997 27.4832 506.393 24.4684 508.6 23.0686C510.808 21.6689 513.903 20.969 517.887 20.969C520.902 20.969 523.405 21.8304 525.397 23.5532C527.389 25.2759 528.385 27.9138 528.385 31.467V132.409C528.385 134.455 527.335 136.07 525.236 137.254C523.136 138.439 520.686 139.031 517.887 139.031C514.98 139.031 512.503 138.439 510.458 137.254C508.412 136.07 507.389 134.455 507.389 132.409V62.961L488.493 96.5545C486.985 99.354 484.616 100.754 481.386 100.754C478.264 100.754 475.949 99.354 474.441 96.5545L455.868 61.6689V132.409C455.868 134.455 454.818 136.07 452.719 137.254C450.619 138.439 448.17 139.031 445.37 139.031C442.463 139.031 439.987 138.439 437.941 137.254C435.895 136.07 434.872 134.455 434.872 132.409ZM539.529 130.31C539.529 130.094 539.637 129.556 539.852 128.694L571.023 27.1063C571.669 24.8452 573.257 23.0956 575.787 21.8573C578.318 20.6191 581.198 20 584.428 20C587.658 20 590.565 20.6191 593.149 21.8573C595.734 23.0956 597.349 24.8452 597.995 27.1063L629.166 128.694C629.381 129.556 629.489 130.094 629.489 130.31C629.489 132.678 628.035 134.724 625.128 136.447C622.221 138.17 619.26 139.031 616.245 139.031C612.261 139.031 609.892 137.631 609.139 134.832L603.001 113.351H566.016L559.879 134.832C559.125 137.631 556.756 139.031 552.773 139.031C549.65 139.031 546.662 138.197 543.809 136.528C540.956 134.859 539.529 132.786 539.529 130.31ZM570.377 96.8775H598.479L584.428 47.2948L570.377 96.8775Z"
-				      fill="black" class="bd-svg-black"/>
-				<path fill-rule="evenodd" clip-rule="evenodd" d="M0 110L10 40L50 0L100 50L70 80L110 120L50 160L0 110Z"
-				      fill="#00D1B2"/>
-			</svg>
-
+		<a class="navbar-item" href="/">
+			<svg version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
+			     width="800px" height="800px" viewBox="0 0 64 64" enable-background="new 0 0 64 64" xml:space="preserve">
+				<g>
+					<g>
+						<path fill-rule="evenodd" clip-rule="evenodd" fill="#394240" d="M32.003,16.003c-8.837,0-16.001,7.165-16.001,16.001
+							s7.165,16.001,16.001,16.001s16.001-7.164,16.001-16.001S40.84,16.003,32.003,16.003z M32.003,40.006
+							c-4.418,0-8.001-3.587-8.001-8.001c0-4.422,3.583-8.001,8.001-8.001s8.001,3.579,8.001,8.001
+							C40.004,36.419,36.421,40.006,32.003,40.006z"/>
+						<path fill-rule="evenodd" clip-rule="evenodd" fill="#394240" d="M12.001,31.997c0-2.211-1.789-4-4-4H4c-2.211,0-4,1.789-4,4
+							s1.789,4,4,4h4C10.212,35.997,12.001,34.208,12.001,31.997z"/>
+						<path fill-rule="evenodd" clip-rule="evenodd" fill="#394240" d="M12.204,46.139l-2.832,2.829c-1.563,1.562-1.563,4.094,0,5.656
+							c1.562,1.562,4.094,1.562,5.657,0l2.833-2.828c1.562-1.562,1.562-4.095,0-5.657C16.298,44.576,13.767,44.576,12.204,46.139z"/>
+						<path fill-rule="evenodd" clip-rule="evenodd" fill="#394240" d="M32.003,51.999c-2.211,0-4,1.789-4,4V60c0,2.211,1.789,4,4,4
+							s4-1.789,4-4l-0.004-4.001C36.003,53.788,34.21,51.999,32.003,51.999z"/>
+						<path fill-rule="evenodd" clip-rule="evenodd" fill="#394240" d="M51.798,46.139c-1.559-1.562-4.091-1.562-5.653,0
+							s-1.562,4.095,0,5.657l2.829,2.828c1.562,1.57,4.094,1.562,5.656,0s1.566-4.094,0-5.656L51.798,46.139z"/>
+						<path fill-rule="evenodd" clip-rule="evenodd" fill="#394240" d="M60.006,27.997l-4.009,0.008
+							c-2.203-0.008-3.992,1.781-3.992,3.992c-0.008,2.211,1.789,4,3.992,4h4.001c2.219,0.008,4-1.789,4-4
+							C64.002,29.786,62.217,27.997,60.006,27.997z"/>
+						<path fill-rule="evenodd" clip-rule="evenodd" fill="#394240" d="M51.798,17.855l2.828-2.829c1.574-1.562,1.562-4.094,0-5.657
+							c-1.559-1.563-4.09-1.563-5.652,0l-2.829,2.836c-1.562,1.555-1.562,4.086,0,5.649C47.699,19.426,50.239,19.418,51.798,17.855z"/>
+						<path fill-rule="evenodd" clip-rule="evenodd" fill="#394240" d="M32.003,11.995c2.207,0.016,4-1.789,4-3.992v-4
+							c0-2.219-1.789-4-4-4c-2.211-0.008-4,1.781-4,3.993l0.008,4.008C28.003,10.206,29.792,11.995,32.003,11.995z"/>
+						<path fill-rule="evenodd" clip-rule="evenodd" fill="#394240" d="M12.212,17.855c1.555,1.562,4.079,1.562,5.646-0.008
+							c1.574-1.547,1.566-4.086,0.008-5.649L15.037,9.37c-1.57-1.571-4.094-1.555-5.657,0c-1.575,1.562-1.575,4.094-0.012,5.657
+							L12.212,17.855z"/>
+					</g>
+					<path fill-rule="evenodd" clip-rule="evenodd" fill="#F9EBB2" d="M39.996,31.997c0-4.422-3.583-8.001-8.001-8.001
+						s-8.001,3.579-8.001,8.001c0,4.414,3.583,8.001,8.001,8.001S39.996,36.411,39.996,31.997z"/>
+				</g>
+				</svg>
 		</a>
 
 		<a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
@@ -21,14 +44,14 @@
 
 	<div id="navbarBasicExample" class="navbar-menu">
 		<div class="navbar-start">
-			<a class="navbar-item icon-text" href="/">
+			<a class="navbar-item icon-text" href="/square">
 				<span class="icon is-small">
 					<img src="/icons/home.svg" alt="">
 				</span>
 				<span>广场</span>
 			</a>
 
-			<a class="navbar-item icon-text">
+			<a class="navbar-item icon-text" href="/hot">
 				<span class="icon is-small">
 					<img src="/icons/hot.svg" alt="">
 				</span>
@@ -36,54 +59,64 @@
 			</a>
 
 			{% if currentUser %}
-				<a class="navbar-item icon-text">
+			<a class="navbar-item icon-text" href="/user/{{ currentUser.username }}">
 					<span class="icon is-small">
 						<img src="/icons/mine.svg" alt="">
 					</span>
-					<span>我的</span>
-				</a>
-				<a class="navbar-item icon-text" href="/memo/add">
+				<span>我的</span>
+			</a>
+			<a class="navbar-item icon-text" href="/memo/add">
 					<span class="icon is-small">
 						<img src="/icons/add.svg" alt="">
 					</span>
-					<span>发言</span>
-				</a>
-				<a class="navbar-item icon-text" href="/user/settings">
-				<span class="icon is-small">
-					<svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24"><g fill="none"
-					                                                                                        stroke="currentColor"
-					                                                                                        stroke-linecap="round"
-					                                                                                        stroke-linejoin="round"
-					                                                                                        stroke-width="2"><path
-									d="M10.325 4.317c.426-1.756 2.924-1.756 3.35 0a1.724 1.724 0 0 0 2.573 1.066c1.543-.94 3.31.826 2.37 2.37a1.724 1.724 0 0 0 1.065 2.572c1.756.426 1.756 2.924 0 3.35a1.724 1.724 0 0 0-1.066 2.573c.94 1.543-.826 3.31-2.37 2.37a1.724 1.724 0 0 0-2.572 1.065c-.426 1.756-2.924 1.756-3.35 0a1.724 1.724 0 0 0-2.573-1.066c-1.543.94-3.31-.826-2.37-2.37a1.724 1.724 0 0 0-1.065-2.572c-1.756-.426-1.756-2.924 0-3.35a1.724 1.724 0 0 0 1.066-2.573c-.94-1.543.826-3.31 2.37-2.37c1 .608 2.296.07 2.572-1.065"/><path
-									d="M9 12a3 3 0 1 0 6 0a3 3 0 0 0-6 0"/></g></svg>
-				</span>
-				</a>
-			{% endif %}
+				<span>发言</span>
+			</a>
+
 		</div>
 
-		<div class="navbar-end">
+		<div class=" navbar-end">
+			{% if currentUser %}
+				{% if currentUser.id == 1 %}
+					<a class="navbar-item icon-text" href="/sysSettings">
+						<span class="icon is-small">
+							<svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24"><g fill="none"
+							                                                                                        stroke="currentColor"
+							                                                                                        stroke-linecap="round"
+							                                                                                        stroke-linejoin="round"
+							                                                                                        stroke-width="2"><path
+											d="M10.325 4.317c.426-1.756 2.924-1.756 3.35 0a1.724 1.724 0 0 0 2.573 1.066c1.543-.94 3.31.826 2.37 2.37a1.724 1.724 0 0 0 1.065 2.572c1.756.426 1.756 2.924 0 3.35a1.724 1.724 0 0 0-1.066 2.573c.94 1.543-.826 3.31-2.37 2.37a1.724 1.724 0 0 0-2.572 1.065c-.426 1.756-2.924 1.756-3.35 0a1.724 1.724 0 0 0-2.573-1.066c-1.543.94-3.31-.826-2.37-2.37a1.724 1.724 0 0 0-1.065-2.572c-1.756-.426-1.756-2.924 0-3.35a1.724 1.724 0 0 0 1.066-2.573c-.94-1.543.826-3.31 2.37-2.37c1 .608 2.296.07 2.572-1.065"/><path
+											d="M9 12a3 3 0 1 0 6 0a3 3 0 0 0-6 0"/></g></svg>
+						</span>
+					</a>
+				{% endif %}
+				<a class="navbar-item " href="/user/settings">
+					<img src="{{ currentUser.avatar_url }}" class="h-10 rounded"/>
+				</a>
+			{% endif %}
+			{% endif %}
 			{% if not currentUser %}
-			<div class="navbar-item">
-				<div class="buttons">
-
+				<div class="navbar-item">
+					<div class="buttons">
+						{% if  sysConfig.config.disable_register != "on" %}
 						<a class="button" href="/user/reg">
 							<strong>注册</strong>
 						</a>
+						{% endif %}
 						<a class="button is-light" href="/user/login">
 							登录
 						</a>
+					</div>
 				</div>
-			</div>
-					{% else %}
-						<a class="navbar-item icon-text" href="/user/logout">
+			{% else %}
+				<a class="navbar-item icon-text" href="/user/logout">
 							<span class="icon is-small">
 							<svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24"><path
 										fill="currentColor"
 										d="m17 7l-1.41 1.41L18.17 11H8v2h10.17l-2.58 2.58L17 17l5-5zM4 5h8V3H4c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h8v-2H4z"/></svg>
 							</span>
-						</a>
-					{% endif %}
+				</a>
+			{% endif %}
+
 		</div>
 	</div>
 </nav>
