--- a/app/view/default/component/memo.Twig
+++ b/app/view/default/component/memo.Twig
@@ -21,7 +21,7 @@
 							src="data:image/svg+xml,%3csvg%20t='1709204592505'%20class='icon'%20viewBox='0%200%201024%201024'%20version='1.1'%20xmlns='http://www.w3.org/2000/svg'%20p-id='16237'%20width='16'%20height='16'%3e%3cpath%20d='M229.2%20512m-140%200a140%20140%200%201%200%20280%200%20140%20140%200%201%200-280%200Z'%20p-id='16238'%20fill='%238a8a8a'%3e%3c/path%3e%3cpath%20d='M794.8%20512m-140%200a140%20140%200%201%200%20280%200%20140%20140%200%201%200-280%200Z'%20p-id='16239'%20fill='%238a8a8a'%3e%3c/path%3e%3c/svg%3e"
 							class="w-3 h-3"/>
 				</div>
-				<div data-trigger-item class="hidden absolute top-[-8px] right-[32px] bg-[#4c4c4c] rounded text-white p-2 px-4">
+				<div data-trigger-item class="text-sm hidden absolute top-[-8px] right-[32px] bg-[#4c4c4c] rounded text-white p-2 px-4">
 					<div class="flex flex-row gap-4">
 
 						<form action="/memo/like/{{ memo.id }}" class="flex flex-row gap-1 cursor-pointer items-center"
